# src/shared/api/types/data-contracts.ts
@@ -1384,6 +1384,23 @@ export enum TestAlertsAlertByTypeCreateParamsPriorityEnum {
 // SignalR-специфичные типы
 // ========================================
 
+export interface AdhdLayoutConfigDto {
+  showBreakingNews: boolean;
+  showCatisa: boolean;
+  showDVDLogos: boolean;
+  showFitnessVideo: boolean;
+  showGTAVideo: boolean;
+  showHydraulicMobileVideo: boolean;
+  showLOFIGirl: boolean;
+  showMukbangVideo: boolean;
+  showNotifications: boolean;
+  showQuiz: boolean;
+  showRainEffect: boolean;
+  showSlimeVideo: boolean;
+  showStreamerVideo: boolean;
+  showSurfer: boolean;
+}
+
 export interface AudioQuizRoundDto {
   artworkUrl?: string;
   /** @format int32 */
